
syntax = "proto3";

option go_package = "github.com/ziyw/dslog/dslog";

import "google/protobuf/timestamp.proto";

package dslog;

service Dslog {
    rpc SendLog(LogRequest) returns (LogResponse) {}
}

message LogRequest {
    google.protobuf.Timestamp timestamp = 1;
    string logType = 2;
    string logMsg = 3;
}

message LogResponse {
    string status = 1;
}
